🔐 Multi-admin architecture finalized: scoped login, admin_id tagging, and role-based access

--- a/sms-frontend-html/add-assignment.html
+++ b/sms-frontend-html/add-assignment.html
@@ -79,10 +79,12 @@
       const deadline = document.getElementById("deadline").value;
       const status = document.getElementById("status-message");
 
+      const admin_id = localStorage.getItem("admin_id"); // ✅ Inject admin_id
+
       fetch("http://localhost:5000/api/add-assignment", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ class: className, subject, deadline })
+        body: JSON.stringify({ class: className, subject, deadline, admin_id })
       })
       .then(res => res.json())
       .then(data => {
