--- a/sms-frontend-html/forgot-password.html
+++ b/sms-frontend-html/forgot-password.html
@@ -44,43 +44,45 @@
       <a href="index.html">⬅️ Back to Login</a>
     </div>
   </div>
+<script>
+  const admin_id = localStorage.getItem("admin_id"); // ✅ Inject admin_id
 
-  <script>
-    document.getElementById("otpForm").onsubmit = async function(e) {
-      e.preventDefault();
-      const role = document.getElementById("role").value;
-      const username = document.getElementById("username").value;
-      const email = document.getElementById("email").value;
+  document.getElementById("otpForm").onsubmit = async function(e) {
+    e.preventDefault();
+    const role = document.getElementById("role").value;
+    const username = document.getElementById("username").value;
+    const email = document.getElementById("email").value;
 
-      const res = await fetch("http://localhost:5000/api/request-otp", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ role, username, email })
-      });
+    const res = await fetch("http://localhost:5000/api/request-otp", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ role, username, email, admin_id }) // ✅ Include admin_id
+    });
 
-      const data = await res.json();
-      document.getElementById("otpMessage").textContent = data.message;
-      if (data.success) {
-        document.getElementById("resetForm").style.display = "block";
-      }
-    };
+    const data = await res.json();
+    document.getElementById("otpMessage").textContent = data.message;
+    if (data.success) {
+      document.getElementById("resetForm").style.display = "block";
+    }
+  };
 
-    document.getElementById("resetForm").onsubmit = async function(e) {
-      e.preventDefault();
-      const role = document.getElementById("role").value;
-      const username = document.getElementById("username").value;
-      const otp = document.getElementById("otp").value;
-      const newPassword = document.getElementById("newPassword").value;
+  document.getElementById("resetForm").onsubmit = async function(e) {
+    e.preventDefault();
+    const role = document.getElementById("role").value;
+    const username = document.getElementById("username").value;
+    const otp = document.getElementById("otp").value;
+    const newPassword = document.getElementById("newPassword").value;
 
-      const res = await fetch("http://localhost:5000/api/reset-password", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ role, username, otp, new_password: newPassword })
-      });
+    const res = await fetch("http://localhost:5000/api/reset-password", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ role, username, otp, new_password: newPassword, admin_id }) // ✅ Include admin_id
+    });
 
-      const data = await res.json();
-      document.getElementById("resetMessage").textContent = data.message;
-    };
-  </script>
+    const data = await res.json();
+    document.getElementById("resetMessage").textContent = data.message;
+  };
+</script>
+  
 </body>
 </html>
