--- a/sms-frontend-html/view-submissions.html
+++ b/sms-frontend-html/view-submissions.html
@@ -84,106 +84,107 @@
     <!-- Results -->
     <div id="submission-list"></div>
   </div>
-
   <script>
-    window.onload = () => {
-      populateClassDropdown("class");
-    };
+  const admin_id = localStorage.getItem("admin_id"); // ✅ Inject admin_id
 
-    function populateClassDropdown(dropdownId) {
-      fetch("http://localhost:5000/api/classes")
-        .then(res => res.json())
-        .then(data => {
-          const dropdown = document.getElementById(dropdownId);
-          dropdown.innerHTML = "";
+  window.onload = () => {
+    populateClassDropdown("class");
+  };
 
-          const defaultOption = document.createElement("option");
-          defaultOption.value = "";
-          defaultOption.textContent = "— Select Class —";
-          defaultOption.disabled = true;
-          defaultOption.selected = true;
-          dropdown.appendChild(defaultOption);
+  function populateClassDropdown(dropdownId) {
+    fetch(`http://localhost:5000/api/classes?admin_id=${encodeURIComponent(admin_id)}`)
+      .then(res => res.json())
+      .then(data => {
+        const dropdown = document.getElementById(dropdownId);
+        dropdown.innerHTML = "";
 
-          data.classes.forEach(cls => {
-            const opt = document.createElement("option");
-            opt.value = cls;
-            opt.textContent = cls;
-            dropdown.appendChild(opt);
-          });
-        })
-        .catch(err => {
-          console.error("❌ Error loading class list:", err);
+        const defaultOption = document.createElement("option");
+        defaultOption.value = "";
+        defaultOption.textContent = "— Select Class —";
+        defaultOption.disabled = true;
+        defaultOption.selected = true;
+        dropdown.appendChild(defaultOption);
+
+        data.classes.forEach(cls => {
+          const opt = document.createElement("option");
+          opt.value = cls;
+          opt.textContent = cls;
+          dropdown.appendChild(opt);
         });
+      })
+      .catch(err => {
+        console.error("❌ Error loading class list:", err);
+      });
+  }
+
+  document.getElementById("class").onchange = () => {
+    const className = document.getElementById("class").value.trim();
+    if (!className) return;
+
+    console.log("📊 View Submissions → Selected class:", className);
+    fetch(`http://localhost:5000/api/class-assignments?class=${className}&admin_id=${encodeURIComponent(admin_id)}`)
+      .then(res => res.json())
+      .then(assignments => {
+        const subjectDropdown = document.getElementById("subject");
+        subjectDropdown.innerHTML = "";
+
+        const defaultOption = document.createElement("option");
+        defaultOption.value = "";
+        defaultOption.textContent = "— Select Subject —";
+        defaultOption.disabled = true;
+        defaultOption.selected = true;
+        subjectDropdown.appendChild(defaultOption);
+
+        assignments.forEach(a => {
+          const opt = document.createElement("option");
+          opt.value = a.subject;
+          opt.textContent = `${a.subject} (Deadline: ${a.deadline})`;
+          subjectDropdown.appendChild(opt);
+        });
+
+        document.getElementById("submission-list").innerHTML = "";
+      })
+      .catch(err => {
+        console.error("❌ Failed to load subjects:", err);
+        document.getElementById("submission-list").innerHTML = "<p>❌ Failed to load subjects.</p>";
+      });
+  };
+
+  document.getElementById("view-btn").onclick = () => {
+    const className = document.getElementById("class").value.trim();
+    const subject = document.getElementById("subject").value.trim();
+
+    if (!className || !subject) {
+      alert("⚠️ Please select both class and subject.");
+      return;
     }
 
-    document.getElementById("class").onchange = () => {
-      const className = document.getElementById("class").value.trim();
-      if (!className) return;
+    fetch(`http://localhost:5000/api/view-submissions?class=${className}&subject=${subject}&admin_id=${encodeURIComponent(admin_id)}`)
+      .then(res => res.json())
+      .then(submissions => {
+        const container = document.getElementById("submission-list");
+        container.innerHTML = "<h3>✅ Submitted Students:</h3>";
 
-      console.log("📊 View Submissions → Selected class:", className);
-      fetch(`http://localhost:5000/api/class-assignments?class=${className}`)
-        .then(res => res.json())
-        .then(assignments => {
-          const subjectDropdown = document.getElementById("subject");
-          subjectDropdown.innerHTML = "";
+        if (!Array.isArray(submissions) || submissions.length === 0) {
+          container.innerHTML += "<p>📭 No submissions found.</p>";
+          return;
+        }
 
-          const defaultOption = document.createElement("option");
-          defaultOption.value = "";
-          defaultOption.textContent = "— Select Subject —";
-          defaultOption.disabled = true;
-          defaultOption.selected = true;
-          subjectDropdown.appendChild(defaultOption);
-
-          assignments.forEach(a => {
-            const opt = document.createElement("option");
-            opt.value = a.subject;
-            opt.textContent = `${a.subject} (Deadline: ${a.deadline})`;
-            subjectDropdown.appendChild(opt);
-          });
-
-          document.getElementById("submission-list").innerHTML = "";
-        })
-        .catch(err => {
-          console.error("❌ Failed to load subjects:", err);
-          document.getElementById("submission-list").innerHTML = "<p>❌ Failed to load subjects.</p>";
+        submissions.forEach(s => {
+          const row = document.createElement("div");
+          row.className = "submission-row";
+          row.innerHTML = `
+            <span class="submission-name">${s.name} (ID: ${s.id})</span>
+            <span class="submission-date">${s.submitted_on}</span>
+          `;
+          container.appendChild(row);
         });
-    };
-
-    document.getElementById("view-btn").onclick = () => {
-      const className = document.getElementById("class").value.trim();
-      const subject = document.getElementById("subject").value.trim();
-
-      if (!className || !subject) {
-        alert("⚠️ Please select both class and subject.");
-        return;
-      }
-
-      fetch(`http://localhost:5000/api/view-submissions?class=${className}&subject=${subject}`)
-        .then(res => res.json())
-        .then(submissions => {
-          const container = document.getElementById("submission-list");
-          container.innerHTML = "<h3>✅ Submitted Students:</h3>";
-
-          if (!Array.isArray(submissions) || submissions.length === 0) {
-            container.innerHTML += "<p>📭 No submissions found.</p>";
-            return;
-          }
-
-          submissions.forEach(s => {
-            const row = document.createElement("div");
-            row.className = "submission-row";
-            row.innerHTML = `
-              <span class="submission-name">${s.name} (ID: ${s.id})</span>
-              <span class="submission-date">${s.submitted_on}</span>
-            `;
-            container.appendChild(row);
-          });
-        })
-        .catch(err => {
-          console.error("❌ Error fetching submissions:", err);
-          document.getElementById("submission-list").innerHTML = "<p>❌ Failed to load submissions.</p>";
-        });
-    };
-  </script>
+      })
+      .catch(err => {
+        console.error("❌ Error fetching submissions:", err);
+        document.getElementById("submission-list").innerHTML = "<p>❌ Failed to load submissions.</p>";
+      });
+  };
+</script>
 </body>
 </html>
