--- a/sms-frontend-html/teacher.html
+++ b/sms-frontend-html/teacher.html
@@ -42,104 +42,107 @@
       </div>
     </div>
   </div>
+<script>
+  function logout() {
+    localStorage.removeItem("admin_id"); // ✅ Clear session
+    window.location.href = 'index.html';
+  }
 
-  <script>
-    function logout() {
-      window.location.href = 'index.html';
+  const admin_id = localStorage.getItem("admin_id"); // ✅ Inject admin_id
+
+  const subMenus = {
+    student: [
+      "📋 View Students",
+      "➕ Add Student",
+      "🔍 Search by ID / Name",
+      "✏️ Edit/Delete Student"
+    ],
+    attendance: [
+      "📝 Mark Attendance",
+      "👨‍🏫 View Teachers"
+    ],
+    assignments: [
+      "🆕 Add Assignment",
+      "📤 Submit Assignment",
+      "📥 View Submissions",
+      "🛠️ Edit/Delete Assignment"
+    ],
+    testmarks: [
+      "📅 Schedule Test",
+      "🧮 Add Marks",
+      "👤 View Marks by Student",
+      "📘 View Marks by Subject",
+      "✏️ Edit/Delete Test",
+      "🛠️ Edit/Delete Marks"
+    ],
+    timetable: [
+      "🗓️ Create Timetable",
+      "📖 View Timetable",
+      "📚 Enter Subjects"
+    ]
+  };
+
+  const pageMap = {
+    "📋 View Students": "teacher-view-students.html",
+    "➕ Add Student": "teacher-add-student.html",
+    "🔍 Search by ID / Name": "teacher-search-student.html",
+    "✏️ Edit/Delete Student": "teacher-edit-delete-student.html",
+    "📝 Mark Attendance": "mark-attendance.html",
+    "👨‍🏫 View Teachers": "view-teachers.html",
+    "🆕 Add Assignment": "add-assignment.html",
+    "📤 Submit Assignment": "submit-assignment.html",
+    "📥 View Submissions": "view-submissions.html",
+    "🛠️ Edit/Delete Assignment": "edit-delete-assignment.html",
+    "📅 Schedule Test": "schedule-test.html",
+    "🧮 Add Marks": "add-marks.html",
+    "👤 View Marks by Student": "view-marks-student.html",
+    "📘 View Marks by Subject": "view-marks-subject.html",
+    "✏️ Edit/Delete Test": "edit-delete-test.html",
+    "🛠️ Edit/Delete Marks": "edit-delete-marks.html",
+    "🗓️ Create Timetable": "create-timetable.html",
+    "📖 View Timetable": "view-timetable.html",
+    "📚 Enter Subjects": "enter-subjects.html"
+  };
+
+  function openCategory(category) {
+    document.getElementById("menu-wrapper").style.display = "none";
+    document.getElementById("dashboard").style.display = "flex";
+
+    const sidebarMenu = document.getElementById("sidebar-menu");
+    sidebarMenu.innerHTML = "";
+
+    const backItem = document.createElement("li");
+    backItem.textContent = "⬅️ Back to Main Menu";
+    backItem.classList.add("back-button");
+    backItem.onclick = goBack;
+    sidebarMenu.appendChild(backItem);
+
+    subMenus[category].forEach(item => {
+      const li = document.createElement("li");
+      li.textContent = item;
+      li.onclick = () => loadContent(item);
+      sidebarMenu.appendChild(li);
+    });
+
+    loadContent(subMenus[category][0]);
+  }
+
+  function loadContent(title) {
+    const content = document.getElementById("content-display");
+    const page = pageMap[title];
+
+    if (page) {
+      const url = `${page}?admin_id=${encodeURIComponent(admin_id)}`; // ✅ Append admin_id
+      content.innerHTML = `<iframe src="${url}" width="100%" height="600px" style="border:none;" sandbox="allow-scripts allow-forms allow-same-origin"></iframe>`;
+    } else {
+      content.innerHTML = `<h2>${title}</h2><p>Content for "${title}" will appear here.</p>`;
     }
+  }
 
-    const subMenus = {
-      student: [
-        "📋 View Students",
-        "➕ Add Student",
-        "🔍 Search by ID / Name",
-        "✏️ Edit/Delete Student"
-      ],
-      attendance: [
-        "📝 Mark Attendance",
-        "👨‍🏫 View Teachers"
-      ],
-      assignments: [
-        "🆕 Add Assignment",
-        "📤 Submit Assignment",
-        "📥 View Submissions",
-        "🛠️ Edit/Delete Assignment"
-      ],
-      testmarks: [
-        "📅 Schedule Test",
-        "🧮 Add Marks",
-        "👤 View Marks by Student",
-        "📘 View Marks by Subject",
-        "✏️ Edit/Delete Test",
-        "🛠️ Edit/Delete Marks"
-      ],
-      timetable: [
-        "🗓️ Create Timetable",
-        "📖 View Timetable",
-        "📚 Enter Subjects"
-      ]
-    };
-
-    const pageMap = {
-      "📋 View Students": "teacher-view-students.html",
-      "➕ Add Student": "teacher-add-student.html",
-      "🔍 Search by ID / Name": "teacher-search-student.html",
-      "✏️ Edit/Delete Student": "teacher-edit-delete-student.html",
-      "📝 Mark Attendance": "mark-attendance.html",
-      "👨‍🏫 View Teachers": "view-teachers.html",
-      "🆕 Add Assignment": "add-assignment.html",
-      "📤 Submit Assignment": "submit-assignment.html",
-      "📥 View Submissions": "view-submissions.html",
-      "🛠️ Edit/Delete Assignment": "edit-delete-assignment.html",
-      "📅 Schedule Test": "schedule-test.html",
-      "🧮 Add Marks": "add-marks.html",
-      "👤 View Marks by Student": "view-marks-student.html",
-      "📘 View Marks by Subject": "view-marks-subject.html",
-      "✏️ Edit/Delete Test": "edit-delete-test.html",
-      "🛠️ Edit/Delete Marks": "edit-delete-marks.html",
-      "🗓️ Create Timetable": "create-timetable.html",
-      "📖 View Timetable": "view-timetable.html",
-      "📚 Enter Subjects": "enter-subjects.html"
-    };
-
-    function openCategory(category) {
-      document.getElementById("menu-wrapper").style.display = "none";
-      document.getElementById("dashboard").style.display = "flex";
-
-      const sidebarMenu = document.getElementById("sidebar-menu");
-      sidebarMenu.innerHTML = "";
-
-      const backItem = document.createElement("li");
-      backItem.textContent = "⬅️ Back to Main Menu";
-      backItem.classList.add("back-button");
-      backItem.onclick = goBack;
-      sidebarMenu.appendChild(backItem);
-
-      subMenus[category].forEach(item => {
-        const li = document.createElement("li");
-        li.textContent = item;
-        li.onclick = () => loadContent(item);
-        sidebarMenu.appendChild(li);
-      });
-
-      loadContent(subMenus[category][0]);
-    }
-
-    function loadContent(title) {
-      const content = document.getElementById("content-display");
-      const page = pageMap[title];
-
-      if (page) {
-        content.innerHTML = `<iframe src="${page}" width="100%" height="600px" style="border:none;" sandbox="allow-scripts allow-forms allow-same-origin"></iframe>`;
-      } else {
-        content.innerHTML = `<h2>${title}</h2><p>Content for "${title}" will appear here.</p>`;
-      }
-    }
-
-    function goBack() {
-      document.getElementById("dashboard").style.display = "none";
-      document.getElementById("menu-wrapper").style.display = "flex";
-    }
-  </script>
+  function goBack() {
+    document.getElementById("dashboard").style.display = "none";
+    document.getElementById("menu-wrapper").style.display = "flex";
+  }
+</script>
 </body>
 </html>
